Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48412

Qt5 IBus input context does not implement hide_preedit_text()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.11.0 Alpha
    • 5.3.2, 5.5.0
    • None
    • openSUSE 13.2 + Qt 5.5 tested with linguist-qt5 and Scribus
    • 5a918ad866301d6b2b4e004e622710cf63597b4b

      IBus engines that calls "hide_preedit_text()" via D-Bus, which includes ibus-mozc, does not work correctly on Qt5 applications because Qt5 does not implement that function.

      With regard to ibus-mozc, users cannot delete the last character in a preedit text. It is expected to be hidden by that function.

      I have implemented hide_preedit_text and show_preedit_text function.
      However, the current specification of Qt input context is not clear (the current implementation is a bit strange to me).

      The "visible" attribute is not used and sending an empty string is the right way to hide preedit?

      The original report is found at:
      https://bugzilla.opensuse.org/show_bug.cgi?id=947013

        For Gerrit Dashboard: QTBUG-48412
        # Subject Branch Project Status CR V

            ftake Fuminobu TAKEYAMA
            ftake Fuminobu TAKEYAMA
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes